# ChangeLog for app-backup/luckybackup
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 May 2009; Momesso Andrea (TopperH) <momesso.andrea@gmail.com>
  +luckybackup-0.2.2.ebuild, +metadata.xml:
  New Ebuild for bug 261396
