@@ -1,4 +1,6 @@
 DIST luckybackup-0.2.2.tar.gz 2101488 RMD160 5cc796b3c5fb1a958156c7c50a8c67c6fed712bd SHA1 7addabbd16576bde4699ccb4bfcd82685a1c4387 SHA256 e6a0ef218cfaf8819219c1b4af59bfcc16526b33ef0a2d2351f4cc1902fd5016
+DIST luckybackup-0.3.tar.gz 2202988 RMD160 2bad472b037afd682161478af0ed44baec5b96a1 SHA1 ed79b28ed3469f29ea78359d7b684ca97d9d1a0a SHA256 391ba78b7b290d45d42a8f4728ca04c73b3e44235027de84c1960a18279c2728
 EBUILD luckybackup-0.2.2.ebuild 559 RMD160 50a2d9d044414a2b4f45ebf1173cd6d1e1abbf52 SHA1 7c6436fbb58c2f29d325aa59c4c719d656a0d864 SHA256 630c9c9b89b87aa11da909a309d31045de5d212ef4814987e7716b61ee132df1
-MISC ChangeLog 263 RMD160 76bcd4debfa3ccb78f2e919b8a25b7ad60a514aa SHA1 955c2db1ffa389cc74debcd53099dcd63fdf3fc1 SHA256 3f05d3ffa59e1eaa112246b6827bf0fd6eb961acc5438f855a8b3d4c6fddf6a5
+EBUILD luckybackup-0.3.ebuild 558 RMD160 61481f03174e6298d16f9afa0ce3f932e719da92 SHA1 b4919f40bd3a6ff9e0722fa8c0aade303df4351a SHA256 e29a6a68b80c76c8adddd2f57170cf79adb0e3a415b06bdd4694f1fde67210a2
+MISC ChangeLog 401 RMD160 b3cf75b3822ee084a2cc0fb9960e0bfc02972dfe SHA1 1ffc7e05d31de2a2258c2046f8aa03564a0addcc SHA256 f6ff9bded6150a70681435880ad11f45657344b446774387650adf1160071c96
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
