@@ -1,0 +1,27 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI="2"
+inherit qt4
+
+DESCRIPTION="Powerful and flexible backup (and syncing) tool, using RSync and Qt4"
+HOMEPAGE="http://luckybackup.sourceforge.net/"
+SRC_URI="http://downloads.sourceforge.net/${PN}/${P}.tar.gz"
+
+LICENSE="GPL-3"
+SLOT="0"
+KEYWORDS="~amd64"
+IUSE=""
+
+DEPEND="x11-libs/qt-gui:4
+	net-misc/rsync"
+RDEPEND="${DEPEND}"
+
+src_configure() {
+	eqmake4
+}
+
+src_install() {
+	emake INSTALL_ROOT="${D}" install || die "install failed"
+}
