@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 May 2009; Momesso Andrea (TopperH) <momesso.andrea@gmail.com>
+  +luckybackup-0.3.ebuild:
+  Version bump for luckybackup, bug 261396
+
   11 May 2009; Momesso Andrea (TopperH) <momesso.andrea@gmail.com>
   +luckybackup-0.2.2.ebuild, +metadata.xml:
   New Ebuild for bug 261396
